@@ -1,0 +1,11 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/landmarks.R
+\name{landmarkData}
+\alias{landmarkData}
+\title{Landmark data.}
+\usage{
+landmarkData()
+}
+\description{
+Nominal and orthogonal coordinates
+}
